@@ -1,35 +1,36 @@
 package com.mygdx.game;
 
-import Model.Function2d;
-import Model.Vector2d;
-
 import java.util.*;
 import java.util.regex.Pattern;
 
-public class FunctionMaker implements Function2d {
+public class FunctionMaker{
 
     /**
-     * FunctionMaker : makes a function that returns operations entered upon creation of Object
      *	op1: addition soustraction (lowest priority)
      *	op2: multiplication division (higher priority)
      *	op3: power (highest priority)
      *	sp: cos, acos, log...: treat as function whatever is on the right?
      */
+    private boolean DEBUG = false;
 
-    private String function; //initial String
-    public ArrayList<String> arguments; // translation into seperate arguments
-    private ArrayList<String> type; //type of arguments (operators, numerical value,etc...)
-    private static HashMap<String, Function> map=null; // map all functions that could be use
-    //Pattern of decimal, natural numbers
+    private String function;
+    public LinkedList<String> arguments;
+    private LinkedList<String> type;
+    private static HashMap<String, Function> map=null;
     private static final String decimalPattern = "([0-9]*)\\.([0-9]*)";
     private static final String naturalPattern = "([0-9]*)";
     private static final String semiDecimalPattern = "([0-9]*)\\.";
     private static final double step = 0.0000001;
 
-    private FunctionMaker[] functions;//functions in that function (funcCeption!)
-    private int funcounter;//keep in memory which function has been computed already
+    private FunctionMaker[] functions;
+    private int funcounter;
+    private double[] temp;
+    private boolean[] computed;
 
-    //call this once only as map is Static
+    private LinkedList<Integer> first;
+    private LinkedList<Integer> second;
+    private LinkedList<Integer> third;
+
     public FunctionMaker(){
         // make a Hashmap with all functions
         map = new HashMap<String, Function>();
@@ -50,6 +51,7 @@ public class FunctionMaker implements Function2d {
         map.put("^", new Function() {
             public double compute(double a, double b) { return Math.pow(a,b); }
         });
+
         map.put("sin", new Function() {
             public double compute(double a, double b) { return Math.sin(a); }
         });
@@ -75,15 +77,13 @@ public class FunctionMaker implements Function2d {
             public double compute(double a, double b) { return Math.sqrt(a); }
         });
     }
-
-    /**
-     * CONSTRUCTOR
-     * @param function : String to translate into a function
-     */
     public FunctionMaker(String function){
         if(map == null) new FunctionMaker();
         this.function = function.toLowerCase().replace(" ","");
+        if(DEBUG) System.out.println(this.function);
         transfer();
+        temp = new double[arguments.size()];
+        computed = new boolean[arguments.size()];
         int c=0;
         for(int i=0;i<type.size();i++) if(type.get(i).equals("FUN")) c++;
         functions = new FunctionMaker[c];
@@ -93,25 +93,23 @@ public class FunctionMaker implements Function2d {
         }
     }
 
-    /**
-     * transfer the string into arguments and keep in memory the type
-     */
     public void transfer(){
-        arguments = new ArrayList<>();
-        type = new ArrayList<>();
+        arguments = new LinkedList<>();
+        type = new LinkedList<>();
         int counter = 0;
         int end = counter+1;
         while(counter < this.function.length()){
             //IF NUMBER
             if(Pattern.matches(naturalPattern,this.function.substring(counter, counter+1))){
-                end=counter;
-                while(end <= this.function.length()&&
-                        (Pattern.matches(naturalPattern,this.function.substring(counter, end))||
+                end=counter+1;
+                while(Pattern.matches(naturalPattern,this.function.substring(counter, end))||
                         Pattern.matches(decimalPattern,this.function.substring(counter, end))||
-                        Pattern.matches(semiDecimalPattern,this.function.substring(counter, end))))
+                        Pattern.matches(semiDecimalPattern,this.function.substring(counter, end)))
                     end++;
+                if(DEBUG) System.out.println("counter: "+counter+", end: "+end+" => "+ this.function.substring(counter, end));
                 arguments.add(this.function.substring(counter, end-1));
                 type.add("NUM");
+                if(DEBUG) System.out.println("end-1:" + (end-1) + " counter ++ : "+ (counter+1));
                 counter = Math.max(end-1, counter+1);
                 //IF OPERATION
             }else if(Pattern.matches("[*/+-^]", this.function.substring(counter, counter+1))){
@@ -120,9 +118,9 @@ public class FunctionMaker implements Function2d {
                 if(Pattern.matches("[+-]", this.function.substring(counter, counter+1))){
                     if(this.function.substring(counter, end).equals("+")){
                         type.add("OP1");
-                    }else{//IF minus is not OPERATOR but (-1)*... :
+                    }else{
                         if(counter-1<0 || this.function.charAt(counter-1)=='('){
-                            arguments.remove(arguments.size()-1);
+                            arguments.removeLast();
                             arguments.add("(-1)");
                             type.add("MIN");
                             counter = end-1;
@@ -138,10 +136,12 @@ public class FunctionMaker implements Function2d {
             }else if(Pattern.matches("[asclt]", this.function.substring(counter, counter+1))){
                 end = counter+1;
                 while(Pattern.matches("[a-w]*", this.function.substring(counter, end)))end++;
+                if(DEBUG) System.out.println("counter: "+counter+", end: "+end+" => "+ this.function.substring(counter, end));
                 arguments.add(this.function.substring(counter, end-1));
                 type.add("SP");
                 counter = end-1;
-                // TODO: verify the next thing is a function
+
+                // verify the next thing is a function
             }else if(this.function.charAt(counter) =='('){
                 int n =0;
                 end = counter+1;
@@ -150,8 +150,10 @@ public class FunctionMaker implements Function2d {
                     else if(n>0 && function.charAt(end) == ')') n--;
                     end++;
                 }
+                if(DEBUG) System.out.println("counter: "+counter+", end: "+end+" => "+ this.function.substring(counter, end));
                 arguments.add(this.function.substring(counter, end+1));
                 type.add("FUN");
+
                 counter = end+1;
                 //IF VARIABLE
             }else if(this.function.charAt(counter)=='x'||this.function.charAt(counter)=='y'){
@@ -162,44 +164,17 @@ public class FunctionMaker implements Function2d {
                 }
                 arguments.add(this.function.substring(counter, counter+1));
                 type.add("VAR");
+                if(DEBUG) System.out.println("VAR");
                 counter++;
             }else{
-                System.out.println("WARNING ! There was a problem reading the formula");
+                //System.out.println("WARNING ! There was a problem reading the formula");
             }
+            if(DEBUG&&counter<this.function.length()) System.out.print(function.charAt(counter));
         }
     }
 
-    /**
-     * get the ouput of the function encoded upon creation of object
-     * @param vector2d : vector which contains x and y coordinates
-     * @return z coordinate
-     */
-    public double evaluate(Vector2d vector2d){
+    public double get_height(double x, double y){
         //new calc -> no functions was used yet and nothing is computed
-        double x = vector2d.getX(), y = vector2d.getY();
-        funcounter=0;
-        boolean[] comput = new boolean[arguments.size()];
-        //find first argument
-        double temp = helper(comput,0, x,y);
-        int index = next(comput);
-        //while there is something left to compute
-        while(index!=-1){
-            temp = helper(temp, comput, index,x,y);
-            index = next(comput);
-        }
-        return temp;
-
-    }
-
-    /**
-     * get the ouput of the function encoded upon creation of object
-     * @param x :  x and y coordinates
-     * @param y : x and y coordinates
-     * @return z coordinate
-     */
-    public double evaluate(double x, double y ){
-        //new calc -> no functions was used yet and nothing is computed
-
         funcounter=0;
         boolean[] comput = new boolean[arguments.size()];
         //find first argument
@@ -241,7 +216,7 @@ public class FunctionMaker implements Function2d {
         }else if(type.get(index).equals("SP")){
             if(type.get(index+1).equals("FUN")){
 
-                arg1=map.get(arguments.get(index)).compute(functions[funcounter++].evaluate(x,y),1.0);
+                arg1=map.get(arguments.get(index)).compute(functions[funcounter++].get_height(x,y),1.0);
                 computed[index]=true;
                 computed[index+1]=true;
 
@@ -258,7 +233,7 @@ public class FunctionMaker implements Function2d {
                 computed[index+1]=true;
             }else if(type.get(index+1).equals("SP")){
                 if(type.get(index+2).equals("FUN")){
-                    arg1=(-1)*map.get(arguments.get(index)).compute(functions[funcounter++].evaluate(x,y),1.0);
+                    arg1=(-1)*map.get(arguments.get(index)).compute(functions[funcounter++].get_height(x,y),1.0);
                     computed[index+1]=true;
                     computed[index+2]=true;
 
@@ -267,16 +242,6 @@ public class FunctionMaker implements Function2d {
         }
         return arg1;
     }
-
-    /**
-     * Helper to compute the output
-     * @param t last argument
-     * @param computed boolean array to keep track of done computations
-     * @param index to keep track of where we are in the computation
-     * @param x : x coordinate
-     * @param y : y coordinate
-     * @return computed solution so far
-     */
     public double helper(double t,boolean[] computed, int index, double x, double y){
         double arg=0;
         //if still in boundaries to see one ahead
@@ -292,7 +257,7 @@ public class FunctionMaker implements Function2d {
                 computed[index]=true;
             }else if(type.get(index).equals("SP")){
                 if(type.get(index+1).equals("FUN")){
-                    arg=map.get(arguments.get(index)).compute(functions[funcounter++].evaluate(x,y),1.0);
+                    arg=map.get(arguments.get(index)).compute(functions[funcounter++].get_height(x,y),1.0);
                     computed[index]=true;
                     computed[index+1]=true;
 
@@ -309,14 +274,14 @@ public class FunctionMaker implements Function2d {
                     computed[index+1]=true;
                 }else if(type.get(index+1).equals("SP")){
                     if(type.get(index+2).equals("FUN")){
-                        arg=(-1)*map.get(arguments.get(index)).compute(functions[funcounter++].evaluate(x,y),1.0);
+                        arg=(-1)*map.get(arguments.get(index)).compute(functions[funcounter++].get_height(x,y),1.0);
                         computed[index+1]=true;
                         computed[index+2]=true;
 
                     }//else{ we have sinx }
                 }
             }else if(type.get(index).equals("FUN")){
-                arg = functions[funcounter++].evaluate(x,y);
+                arg = functions[funcounter++].get_height(x,y);
                 computed[index]=true;
             }///////////////////////COMPARE TO NEXT NON COMPUTED OP//////////////////////////////
 
@@ -350,51 +315,32 @@ public class FunctionMaker implements Function2d {
                 arg = Double.parseDouble(arguments.get(index-1));
                 computed[index]=true;
             }
-            //System.out.println(t+" "+arg+" index:"+index );
+           // System.out.println(t+" "+arg+" index:"+index );
             return arg;
         }
-        //We should not reach this far unless all calc are done
-//        System.out.println(index+" "+ t + " " + arg);
-//        System.out.println("error here");
+       // System.out.println(index+" "+ t + " " + arg);
+        //System.out.println("error here");
         return t;
     }
 
-//    public static void main(String[] args){
-//        FunctionMaker f = new FunctionMaker("sin(x)+y");
-//        for(String s : f.arguments) System.out.print(s);
-//        System.out.println("HERE"+f.get_height(Math.PI/2,1));
-//        //System.out.println("HERE"+f.get_height(1,2));
-//    }
-
-    /**
-     * verify whether operation a is before b
-     * @param a operation on the left of the variable/numerical value/...
-     * @param b operation on the right
-     * @return true if operation on the left is before
-     */
-    public static boolean priority(String a, String b){
-        if(a.startsWith("OP") && b.startsWith("OP")) return a.charAt(2)>=b.charAt(2);
-        System.out.println("bug in priority");
-        System.out.println("op1: "+a+" / op2: "+b);
-        return false;
+    public static void main(String[] args){
+        FunctionMaker f = new FunctionMaker("sin(x)+y");
+        //for(String s : f.arguments) System.out.print(s);
+        //System.out.println("HERE"+f.get_height(Math.PI/2,1));
+        //System.out.println("HERE"+f.get_height(1,2));
     }
 
-    /**
-     * find next argument not yet computed
-     * @param compute the boolean array representing the computations states
-     * @return first index of which argument has not been computed yet, -1 otherwise
-     */
+
+    public static boolean priority(String a, String b){
+        if(a.startsWith("OP") && b.startsWith("OP")) return a.charAt(2)>=b.charAt(2);
+        //System.out.println("bug in priority");
+       // System.out.println("op1: "+a+" / op2: "+b);
+        return false;
+    }
     public static int next(boolean[] compute){
         for(int i=0; i< compute.length; i++) if(!compute[i]) return i;
         return -1;
     }
-
-    /**
-     * find next argument not yet computed from a certain index
-     * @param computed the boolean array representing the computations states
-     * @param i index at which to start the search
-     * @returnfirst index of which argument has not been computed yet after index, -1 otherwise
-     */
     public static int nextFrom(boolean[] computed, int i){
         if(i<computed.length) {
             while(i<computed.length&&computed[i]) i++;
